# docs/swagger.json
@@ -73,6 +73,30 @@
                 }
             }
         },
+        "/pfil-event-tracing-cron": {
+            "post": {
+                "description": "pfil's event cron job api, call by dolphin scheduler",
+                "consumes": [
+                    "application/json",
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "tags": [
+                    "Inner|Cron"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Healthy examination",
